	new file:   Book/real-time-3d-rendering-with-directx-and-hlsl/external/assimp/include/assimp/vector2.inl
	new file:   Book/real-time-3d-rendering-with-directx-and-hlsl/external/assimp/include/assimp/vector3.h
	new file:   Book/real-time-3d-rendering-with-directx-and-hlsl/external/assimp/include/assimp/vector3.inl
	new file:   Book/real-time-3d-rendering-with-directx-and-hlsl/external/assimp/include/assimp/version.h
	new file:   Book/real-time-3d-rendering-with-directx-and-hlsl/external/assimp/lib/assimp_debug-dll_win32/assimpd.lib
	new file:   Book/real-time-3d-rendering-with-directx-and-hlsl/external/assimp/lib/assimp_release-dll_win32/assimp.lib
	modified:   History.txt

+---------+---------+---------+---------+---------+---------+---------+---------+ 
d.2015/12/23.17_11_24.30.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   Doc/K/T.2015.BugFree.cs
	modified:   History.txt

+---------+---------+---------+---------+---------+---------+---------+---------+ 
d.2015/12/25.17_02_32.12.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   Doc/K/T.2015.BugFree.cs
	modified:   History.txt

+---------+---------+---------+---------+---------+---------+---------+---------+ 
d.2015/12/29.11_10_59.65.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   Doc/K/T.2015.pXr.cs
	modified:   History.txt

+---------+---------+---------+---------+---------+---------+---------+---------+ 
d.2016/01/04.14_09_52.69.K.MzM.T@WS 
On branch master
Your branch is up-to-date with 'origin/master'.

Changes to be committed:
  (use "git reset HEAD <file>..." to unstage)

	modified:   Doc/K/T.2015.pXr.cs
	modified:   History.txt
