@@ -11508,3 +11508,14 @@ Changes to be committed:
 	modified:   Doc/K/T.2015.pXr.cs
 	modified:   History.txt
 
++---------+---------+---------+---------+---------+---------+---------+---------+ 
+d.2016/01/04.20_29_08.86.K.MzM.T@WS 
+On branch master
+Your branch is up-to-date with 'origin/master'.
+
+Changes to be committed:
+  (use "git reset HEAD <file>..." to unstage)
+
+	modified:   Book/DX/DX10.Luna/PartII/Common/d3dUtil.h
+	modified:   History.txt
+
